--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,7 +7,7 @@ jobs:
       - run: echo "the job was automatically triggered by the event ${{github.event_name}}"
       - run: echo "this job is now running on a ${{runner.os}} server"
       - run: echo "the name of the branch is ${{github.ref}} in the repo ${{github.repository}} "
-      - run: check out reposotiry code
+      - name: check out reposotiry code
         uses: actions/checkout@v3
       - run: echo "the ${{github.repository}} repo has been cloned to the runner"
       - run: echo "the workflow is ready to test your code on the runner"
